--- a/django_app/hello/templates/hello/index.html
+++ b/django_app/hello/templates/hello/index.html
@@ -4,17 +4,22 @@
 <head>
     <meta charset="utf-8">
     <title>{{title}}</title>
-    <link rel="stylesheet" type="text/css"
-    href="{% static 'hello/css/style.css' %}"/>
-</head>
-<body >
-    <h1>{{title}}</h1>
-    <p>{{msg}}</p>
-    <form action="{% url 'form' %}" method="POST">
+    <link rel="stylesheet" 
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+    crossorigin="anonymous">
+    </head>
+<body class="container">
+    <h1 class="display-4 text-primary">{{title}}</h1>
+    <p class="h5 mt-4">{{message|safe}}</p>
+    <form action="{% url 'index' %}" method="post">
         {% csrf_token %}
-        <label for="msg">message:</label>
-        <input id="msg" type="text" name="msg">
-        <input type="submit" value="click">
+        <table>
+            {{ form.as_table }}
+            <tr><td></td>
+                <td><input type="submit" value="click">
+                </td>
+            </tr>
+        </table>
     </form>
 </body>
 </html>
