--- a/django_app/hello/templates/hello/index.html
+++ b/django_app/hello/templates/hello/index.html
@@ -9,6 +9,14 @@
     crossorigin="anonymous">
     </head>
 <body class="container">
+    <h1 class="display-4 text-primary">{{title}}</h1>
+    <p class="h5 mt-4">{{message|safe}}</p>
+    <form action="{% url 'index' %}" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="click">
+    </form>
+    <hr>
     <table class="table">
         <tr>
             <th>ID</th>
