--- a/django_app/hello/templates/hello/create.html
+++ b/django_app/hello/templates/hello/create.html
@@ -10,15 +10,10 @@
     </head>
 <body class="container">
     <h1 class="display-4 text-primary">{{title}}</h1>
-    <table class="table">
-        <tr>
-            <th>data</th>
-        </tr>
-    {% for item in data %}
-        <tr>
-            <td>{{item}}</td>
-        <tr>
-    {% endfor %}
-    </table>
+    <form action="{% url 'create' %}" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="click" class="btn btn-primary mt-2">
+    </form>
 </body>
 </html>
